--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     </style>
 </head>
 <body>
-    <form method="POST" action="http://localhost:5000/subscribed">
+    <div>
         <input type="email" name="email" id="email"/>
-        <button type="submit">Submit</button>
-    </form>
+        <button type="submit" id="subscribe-btn">Submit</button>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
